--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 5
 <table width="1020" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td height="200" colspan="6" valign="top"><img src="../priyaphat5-2 no.21/Header.jpg" width="1020" height="200" /></td>
+    <td height="200" colspan="6" valign="top"><img src="Header.jpg" width="1020" height="200" /></td>
   </tr>
   <tr>
     <td width="170" height="50" align="center" valign="middle" bgcolor="#FFFF33">หน้าแรก</td>
